Update PayPal donation link in index.html

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ I’m <strong style="color:var(--kali-cyan)">Besar Sadriu</strong>, a 15-year-ol
 <div style="display:flex;gap:12px;justify-content:center;flex-wrap:wrap">
 <a class="btn" href="mailto:sadriubesar2@gmail.com">📧 Email</a>
 <a class="btn" href="tel:+381631739440">📱 Call</a>
-<a class="btn" href="https://www.paypal.com/donate?business=besarsadriu@gmail.com" target="_blank" rel="noopener noreferrer">💰 Donate</a>
+<a class="btn" href="https://www.paypal.com/ncp/payment/72GA342XXXZAU" target="_blank" rel="noopener noreferrer">💰 Donate</a>
 </div>
 </section>
 
